--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <div class="col-sm-3 col-6">
                             <a href="checkup.html">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-university fa-4x mb-3" aria-hidden="true"></i>
+                                <i class="fa fa-university fa-4x text-success mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">บริการ<small class="d-block" style="color: darkgreen; font-size: 0.60rem;">ตรวจสุขภาพเคลื่อนที่</small></h6>
                             </div>
                             </a>
@@ -158,7 +158,7 @@
                         <div class="col-sm-3 col-6">
                             <a href="outsort.html">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-user fa-4x mb-3" aria-hidden="true"></i>
+                                <i class="fa fa-user fa-4x text-success mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0" style="color: gray; font-size: 0.75rem;">ติดต่อและจัดหา<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">บุคลากรวิชาชีพ</small></h6>
                             </div>
                             </a>
@@ -166,7 +166,7 @@
                         <div class="col-sm-3 col-6">
                             <a href="method.html">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-4x fa-microscope text-secondary mb-3"></i>
+                                <i class="fa fa-4x fa-microscope text-success mb-3"></i>
                                 <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">เครื่องมือตรวจด้านชีวอนามัย</small></h6>
                             </div>
                             </a>
@@ -174,7 +174,7 @@
                         <div class="col-sm-3 col-6">
                             <a href="xray_rent.html">
                             <div class="bg-light text-center rounded-circle py-4">
-                                <i class="fa fa-truck fa-4x mb-3" aria-hidden="true"></i>
+                                <i class="fa fa-truck fa-4x text-success mb-3" aria-hidden="true"></i>
                                 <h6 class="mb-0"  style="color: gray; font-size: 0.75rem;">บริการให้เช่า<small  class="d-block" style="color: darkgreen; font-size: 0.60rem;">รถเอ็กซเรย์ ระบบดิจิตอล</small></h6>
                             </div>
                             </a>
@@ -243,7 +243,7 @@
 }
 </style>
         <div class="b-example-divider" style="justify content: center;">
-             <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4 mb-3 fw-bold mt-3" style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
+             <a href="package.html" class="nav-item nav-link border border-success rounded-pill text-center py-1 px-4  mb-3 fw-bold " style="color: darkgreen; cursor: pointer; border-color: darkgreen;">แพคเกจตรวจสุขภาพ</a>
       </div>
         </div>
   <div class="container-fluid">
