--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
                     
-                    <h1 class="display-1 text-white mb-md-4" style="color: darkgreen;/">R&B Medical Laboratory</h1>
+                    <h1 class="display-1  mb-md-4" style="color: darkgreen;/">R&B Medical Laboratory</h1>
                    
                 </div>
             </div>
