--- a/ua.html
+++ b/ua.html
@@ -128,7 +128,7 @@
                   <a class="nav-link" href="chem.html">ผลวิเคราะห์ทางห้องปฎิบัติการ</a>
                 </li>
                 <li class="nav-item text-end">
-                  <a class="nav-link active" href="bio.html" >ชีวอนามัย</a>
+                  <a class="nav-link" href="bio.html" >ชีวอนามัย</a>
                 </li>
               </ul>
         </div>
