--- a/ua.html
+++ b/ua.html
@@ -165,7 +165,7 @@
           
            </tbody>
     </table>
-  <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="200" height="200" style="shape-rendering: auto; display: block; background: rgb(255, 255, 255);"><g><g transform="rotate(0 50 50)">
+  <svg id="loading" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 100 100" preserveAspectRatio="xMidYMid" width="200" height="200" style="shape-rendering: auto; display: block; background: rgb(255, 255, 255);"><g><g transform="rotate(0 50 50)">
   <rect fill="#71fe8c" height="12" width="6" ry="6" rx="3" y="24" x="47">
     <animate repeatCount="indefinite" begin="-0.9166666666666666s" dur="1s" keyTimes="0;1" values="1;0" attributeName="opacity"/>
   </rect>
@@ -273,9 +273,13 @@ function loadAllRecords() {
                 }
             });
         })
-        .catch(error => {
+           .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
+    hideLoading();
+}
+function hideLoading(){
+  $("#loading").css('display','none');
 }
 
 // ✅ เรียกใช้งานเมื่อหน้าเว็บโหลดเสร็จ
