--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
                  widht: 20px;
                  height: 20px;
              }
+             .display-1{
+                 display: none;
+             }
 }
           
         
