--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                  widht: 20px;
                  height: 20px;
              }
-             .display-1{
+             #textdisplay{
                  display: none;
              }
 }
@@ -125,7 +125,7 @@
             <div class="row justify-content-start">
                 <div class="col-lg-8 text-center text-lg-start">
                     
-                    <h1 class="display-1  mb-md-4" style="color: darkgreen;/">R&B Medical Laboratory</h1>
+                    <h1 id="textdisplay" class="display-1  mb-md-4" style="color: darkgreen;">R&B Medical Laboratory</h1>
                    
                 </div>
             </div>
