--- a/admin.html
+++ b/admin.html
@@ -212,10 +212,10 @@
             </div>
         </header>
                         
-        <div  class="iframe-container">
+        <div  class="iframe-container" style="height: 800px;">
             <iframe id="data" src="https://docs.google.com/spreadsheets/d/1Vlbfxl6aQq9FOBiM2RyoFLIo5L0lOwCaQogrG4nxj8A/edit?usp=sharing"></iframe>
         </div> 
-         <div class="iframe-container">                   
+         <div class="iframe-container mt-3" style="height: 800px;">                   
             <iframe id="website" src="https://docs.google.com/spreadsheets/d/1zzmJMatdYdsMhn3ArKqbXASHwVS863na6RBRzW7QmWc/edit?usp=drive_link"></iframe>
          </div>
                       
