--- a/package.html
+++ b/package.html
@@ -60,6 +60,25 @@
         border-width: 1px 0;
         box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
       }
+
+     #floating-img {
+    position: fixed;
+    bottom: 50px;
+    /* ปรับตำแหน่งแนวตั้ง */
+    right: 10px;
+    /* ปรับตำแหน่งแนวนอน */
+    width: 100px;
+    height: 100px;
+    right: 30px;
+    background: rgba(247, 246, 246, 0.1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 9999;
+    /* ให้ไอคอนอยู่ด้านบน */
+  }
 </style>
 <body>
     <!-- Spinner Start -->
