--- a/home.html
+++ b/home.html
@@ -193,7 +193,12 @@
       </div>
     </div>
   </div>
-
+ <a id="floating-img" href="https://lin.ee/6KvgXbZ">
+      <div style="cursor: pointer;" class="nav-profile-cart">
+        <img src="https://img2.pic.in.th/pic/admin-contact-1.png" style="width: 80px; height: 80px;">
+       
+      </div>
+    </a>
   <script src="https://cdn.jsdelivr.net/npm/@Popperjs/core@2.11.8/dist/umd/Popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
     crossorigin="anonymous"></script>
