--- a/index.html
+++ b/index.html
@@ -286,6 +286,12 @@
   </button>
 </div>
         </div>
+       <a id="floating-img" href="https://lin.ee/6KvgXbZ">
+      <div style="cursor: pointer;" class="nav-profile-cart">
+        <img src="https://img2.pic.in.th/pic/admin-contact-1.png" style="width: 80px; height: 80px;">
+       
+      </div>
+    </a>
        
 <script>
 const scriptUrl = 'https://script.google.com/macros/s/AKfycbxz5yzb_XHLC4wE85se0yT_RhunZogxfEWVsYFHExq2gpuCFShtECwMH_S_3hE8YBSMog/exec'; // 👉 ใส่ URL ของคุณ
