--- a/admin.html
+++ b/admin.html
@@ -93,7 +93,7 @@ body{
   max-width: 100%;
   position: relative; 
  
-  
+  #downloadExce, #dowload                                                                                                                                           
  
 }
 
@@ -232,7 +232,7 @@ padding: 20px;
 
           <div class="col-2  mt-4">
             <div class="btn-group ms-4">
-          <button id="downloadExcel" class="btn btn-secondary">Download Excel</button>
+          <button id="downloadExcel" class="btn btn-outline-secondary">Download Excel</button>
          
         
           <button id="downloadPDF" class="btn btn-secondary">Download PDF</button>
