--- a/admin.html
+++ b/admin.html
@@ -18,6 +18,8 @@
  
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
+  <link rel="stylesheet" href="Dashboard.html">
+</head>
 <style>
 
 body{
@@ -189,7 +191,7 @@ padding: 20px;
 }
     
 </style>
-</head>
+
 
 <body>
 <div class="container"> 
@@ -211,8 +213,10 @@ padding: 20px;
     
       <div class="col-2">
         <div class=".nav-menu ">
-          <a href="">BMI Calculate</a><br>
-          <a href="">Muscle Test</a>
+          <a href="admin.html">BMI Calculate</a><br>
+          <a class="mt-5" href="Dashboard.html">Grip Strengt.</a><br>
+          <a class="mt-5" href="legs.html" active>Legs Strengt.</a><br>
+          <a class="mt-5"href="back.html" active>Back Strengt.</a><br>
         </div>
 
       </div>
