--- a/admin.html
+++ b/admin.html
@@ -45,12 +45,12 @@
         <div class="d-flex flex-column flex-shrink-0 p-3 bg-body-tertiary" style="width: 280px;">
           <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
             <svg class="bi pe-none me-2" width="40" height="32" aria-hidden="true"><use xlink:href="#bootstrap"/></svg>
-            <span class="fs-5 fw-bold" style="font-family: sarabun; color:darkgreen;">แปรผลแรงเหยียดขา</span>
+            <span class="fs-5 fw-bold" style="font-family: sarabun; color:darkgreen;">แปรผลค่าBMI</span>
           </a>
           <hr>
           <ul class="nav nav-pills flex-column mb-auto" >
             <li class="nav-item" style="font-family: sarabun;">
-              <a href="admin.html" class="nav-link link-body-emphasis fw-bold">
+              <a href="admin.html" class="nav-link current ">
                 <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true"><use xlink:href="admin.html"/></svg>
                 BMI Calculater
               </a>
@@ -62,7 +62,7 @@
               </a>
             </li>
             <li>
-              <a href="legs.html" class="nav-link current">
+              <a href="legs.html" class="nav-link link-body-emphasis fw-bold">
                 <svg class="bi pe-none me-2" width="16" height="16" aria-hidden="true"><use xlink:href="legs.html"/></svg>
                 Legs Strenght.
               </a>
