--- a/price.html
+++ b/price.html
@@ -32,6 +32,24 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <style>
+     #floating-img {
+    position: fixed;
+    bottom: 50px;
+    /* ปรับตำแหน่งแนวตั้ง */
+    right: 10px;
+    /* ปรับตำแหน่งแนวนอน */
+    width: 100px;
+    height: 100px;
+    right: 30px;
+    background: rgba(247, 246, 246, 0.1);
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 9999;
+    /* ให้ไอคอนอยู่ด้านบน */
+  }
       .nav-logo {
             width: 50px;
 
