--- a/personal.html
+++ b/personal.html
@@ -378,7 +378,7 @@
         var searchKey = document.getElementById('searchKey').value.trim();
         var password = document.getElementById('password').value.trim();
 
-        const urlsheet1 = "https://script.google.com/macros/s/AKfycbzruA7wMKOmHO75zeAOx5Lfi7JZMOINVI48tv3v4j8X11GruKMckcGVQeHWlRKNGHdD/exec";
+        const urlsheet1 = "https://script.google.com/macros/s/AKfycbxuaVFBF_aYbRIHnbWuTaValM461NiDiCzKJuEMn40tQornCA828Y1Jy-uB_RtqMG1CoA/exec";
 
         fetch(urlsheet1)
           .then(response => response.json())
@@ -624,6 +624,10 @@
     </tr>                             
    </tbody>
    </table> 
+   <div class="input-group>
+   <label style="font-size: 0.75rem;>คำอธิบาย</label>
+   <span style="font-size: 0.75rem;>${foundUser.cbcsum}</span>
+   </div>
  </div>
    </div>
 
