--- a/personal.html
+++ b/personal.html
@@ -528,7 +528,7 @@
                                        <div class="col-auto">
                                         <label class="col-form-label ms-1 fw-bold">ความเห็นแพทย์ :</label>
                                         </div>
-                                         <div class="col-auto">
+                                         <div class="col-auto ms-2 mt-1">
                                           <label>${foundUser.doctor}</label>
                                        </div>
                                        </div>
