--- a/personal.html
+++ b/personal.html
@@ -624,7 +624,8 @@
     </tr>                             
    </tbody>
    </table> 
-  
+  <p style="font-size: 0.75rem;">ผลการวินิจฉัย</p><br>
+  <p style="font-size: 0.75rem;">${fundUser.cbcsum}</p>
  </div>
    </div>
 
