--- a/personal.html
+++ b/personal.html
@@ -625,7 +625,7 @@
    </tbody>
    </table> 
   <p style="font-size: 0.75rem;">ผลการวินิจฉัย</p><br>
-  <p style="font-size: 0.75rem;">${fundUser.cbcsum}</p>
+  <p style="font-size: 0.75rem;">${foundUser.cbcsum}</p>
  </div>
    </div>
 
