--- a/personal.html
+++ b/personal.html
@@ -33,6 +33,9 @@
       font-family: Sarabun;
 
     }
+    #hidden{
+      display: block;
+    }
 
     .bd-placeholder-img {
       font-size: 1.125rem;
