--- a/personal.html
+++ b/personal.html
@@ -627,8 +627,10 @@
     </tr>                             
    </tbody>
    </table> 
+   <div class="ms-1">
   <p style="font-size: 0.75rem;">ผลการวินิจฉัย</p><br>
   <p style="font-size: 0.75rem;">${foundUser.cbcsum}</p>
+  </div>
  </div>
    </div>
 
