--- a/personal.html
+++ b/personal.html
@@ -627,7 +627,7 @@
     </tr>                             
    </tbody>
    </table> 
-   <div class="ms-1">
+   <div class="col-2 ms-1">
   <p style="font-size: 0.75rem;">ผลการวินิจฉัย</p><br>
   <p style="font-size: 0.75rem;">${foundUser.cbcsum}</p>
   </div>
