--- a/personal.html
+++ b/personal.html
@@ -628,11 +628,8 @@
     </tr>                             
    </tbody>
    </table> 
-   <div class="col-2 ms-1">
-  <p style="font-size: 0.75rem;">ผลการวินิจฉัย</p><br>
-  <p style="font-size: 0.75rem;">${foundUser.cbcsum}</p>
-  </div>
- </div>
+   </div>
+   <p style="font-size: 0.75rem;>สรุป : ${foundUser.cbcsum}</p>
    </div>
 
  <div class="row align-items-center">
