--- a/personal.html
+++ b/personal.html
@@ -629,7 +629,7 @@
    </tbody>
    </table> 
    </div>
-   <p style="font-size: 0.75rem;>สรุป : ${foundUser.cbcsum}</p>
+   <p style="font-size: 0.75rem;">สรุป : ${foundUser.cbcsum}</p>
    </div>
 
  <div class="row align-items-center">
