--- a/personal.html
+++ b/personal.html
@@ -628,9 +628,9 @@
     </tr>                             
    </tbody>
    </table> 
-    </div>
-   <p class="border p-1" style="font-size: 0.75rem; background-color: khaki;">สรุป : ${foundUser.cbcsum}</p>
    
+   <div class="row border p-1" style="font-size: 0.75rem; background-color: khaki;">สรุป : ${foundUser.cbcsum}</p>
+    </div>
    </div>
 
  <div class="row align-items-center">
