--- a/personal.html
+++ b/personal.html
@@ -628,10 +628,11 @@
     </tr>                             
    </tbody>
    </table> 
-   
-   <div class="row border p-1" style="font-size: 0.75rem; background-color: khaki;">สรุป : ${foundUser.cbcsum}</p>
-    </div>
+   <div class="row">
+    <div class="col-10" style="font size: 0.75rem;">สรุป ${foundUser.cbcsum}</div>
    </div>
+   </div>
+  </div>
 
  <div class="row align-items-center">
 <div class="container-hidden ms-3 mb-3" id="hide" style="background-color: #CCFFFF;">
