--- a/personal.html
+++ b/personal.html
@@ -629,7 +629,7 @@
    </tbody>
    </table> 
    <div class="row">
-    <div class="col-10" style="font size: 0.75rem;">สรุป ${foundUser.cbcsum}</div>
+    <div class="col-10" style="font size: 0.75rem;">${foundUser.cbcsum}</div>
    </div>
    </div>
   </div>
