--- a/personal.html
+++ b/personal.html
@@ -539,7 +539,6 @@
                           
                    
   
-  <div class="row align-items-center">
 <div class="container-hidden ms-3 mb-3" id="hidden" style="display:none;">
   <table class="table-hidden border-dark mb-5" >
                <thead class="border-bottom" style="border-color: black;">
@@ -628,10 +627,7 @@
     </tr>                             
    </tbody>
    </table> 
-   <div class="row">
-    <div class="col-10" style="font size: 0.75rem;">
-    <p>${foundUser.cbcsum}</p>
-    </div>
+ 
    </div>
    </div>
   </div>
@@ -738,8 +734,9 @@
     </tr>                                                                     
    </tbody>
    </table> 
+   <p style="font-size: 0.75rem;">${foundUser.cbcsum}</p>
  </div>
-   </div>
+   
 
     </form>
    </div>
