--- a/personal.html
+++ b/personal.html
@@ -535,7 +535,7 @@
                           
                    
   
-  <div class="modal" id="hidden" style="display: none;">
+  <div class="modal" id="hidden" style="display: none; background-color: khaki; top: 30px; left: 100px;">
   <div clas="modal-content">
     <div class="modal-header">
     </div>
