--- a/personal.html
+++ b/personal.html
@@ -41,6 +41,15 @@
       -moz-user-select: none;
       user-select: none;
     }
+    #hidden {
+      display: block;
+      width: 50%;
+      max-height: 700px;
+      top: 100px;
+      left: 50px;
+      border-radius: 10px;
+      box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+}
 
     @media (min-width: 768px) {
       .bd-placeholder-img-lg {
@@ -535,7 +544,7 @@
                           
                    
   
-  <div class="modal" id="hidden" style="display: none; background-color: khaki; top: 30px; left: 100px;">
+  <div class="modal" id="hidden" style="display: none;">
   <div clas="modal-content">
     <div class="modal-header">
     </div>
