--- a/personal.html
+++ b/personal.html
@@ -43,12 +43,13 @@
     }
     #hidden {
       display: block;
-      width: 50%;
+      width: 30%;
       max-height: 700px;
       top: 100px;
-      left: 50px;
+      left: 100px;
       border-radius: 10px;
       box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+      background-color: khaki;
 }
 
     @media (min-width: 768px) {
