--- a/personal.html
+++ b/personal.html
@@ -555,7 +555,7 @@
                <thead class="border-bottom" style="border-color: black;">
             <tr>
 
-      <th colspan="2" class="text-center">Test</th>
+      <th colspan="2" class="text-center" style="max-width: 150px; min-width: 150px;">Test</th>
       <th scope="col" class="text-center">ค่าที่ได้</th>
       <th scope="col" class="text-center">ค่าปกติ</th>
     </tr>
