--- a/personal.html
+++ b/personal.html
@@ -562,14 +562,14 @@
   </thead>
    <tbody>
     <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"</th>
       <td>เม็ดเลือดขาว(WBC)</td>
         <td class="text-center">${foundUser.bwbc}</td> 
         <td class="text-center">5,000-10,000 cell/mL</td> 
     </tr>                              
 
   <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
         <td>Hemogobin</td>
        <td class="text-center">${foundUser.hemo}</td> 
        <td class="text-center">13.7-17.5 g/dL</td> 
@@ -605,28 +605,28 @@
     </tr> 
 
 <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"</th>
       <td>Eosinphil</td>
        <td class="text-center">${foundUser.eos}</td> 
        <td class="text-center">0.8-7%</td> 
     </tr>  
 
  <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>Basophill</td>
         <td class="text-center">${foundUser.bas}</td> 
        <td class="text-center">0.2-1.2%</td> 
     </tr>   
 
   <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>Platlet count</td>
          <td class="text-center">${foundUser.plat}</td>
        <td class="text-center">140,000-400,000 cell/cu.mm</td> 
     </tr> 
 
   <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>MCV</td>
        <td class="text-center">${foundUser.mcv}</td>
        <td class="text-center">80-100 fl</td> 
