--- a/personal.html
+++ b/personal.html
@@ -46,7 +46,7 @@
       width: 30%;
       max-height: 500px;
       top: 100px;
-      left: 100px;
+      left: 250px;
       border-radius: 10px;
       box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
       background-color: khaki;
@@ -577,28 +577,28 @@
 
 
 <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
        <td>Hematocrit</td>
        <td class="text-center">${foundUser.hema}</td> 
        <td class="text-center">40.1-51%</td>
     </tr>     
 
 <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>Neutrophils</td>
         <td class="text-center">${foundUser.neu}</td> 
        <td class="text-center">34-67.9%</td> 
     </tr>     
 
 <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>Lymthocytes</td>
         <td class="text-center">${foundUser.lym}</td>
        <td class="text-center">21.8-53.1%</td> 
     </tr> 
 
 <tr>
-      <th scope="row" colspan="2"></th>
+      <th scope="row"></th>
       <td>Monocyte</td>
        <td class="text-center">${foundUser.mono}</td> 
        <td class="text-center">5.3-12.2%</td> 
