--- a/personal.html
+++ b/personal.html
@@ -644,7 +644,7 @@
    </div>
   </div>
 </div>
-
+</div>
  <div class="row align-items-center">
 <div class="container-hidden ms-3 mb-3" id="hide" style="background-color: #CCFFFF;">
   <table class="table-hidden border-dark mb-5" >
