--- a/personal.html
+++ b/personal.html
@@ -638,14 +638,14 @@
    </tbody>
    </table> 
    </div>
- <class="modal-footer">
+ <div class="modal-footer">
  <p style="font-size: 0.75rem;">สรุป__${foundUser.cbcsub}</p>
  </div>
+    </div>
    </div>
   </div>
-</div>
-</div>
-</div>
+ 
+
  <div class="row align-items-center">
 <div class="container-hidden ms-3 mb-3" id="hide" style="background-color: #CCFFFF;">
   <table class="table-hidden border-dark mb-5" >
