--- a/personal.html
+++ b/personal.html
@@ -691,7 +691,7 @@
 
   <tr>
       <th scope="row"></th>
-      <td>MCV</td>
+      <td>RBC Count</td>
        <td class="text-center">${foundUser.mcv}</td>
        <td class="text-center">80-100 fl</td> 
     </tr>                             
