--- a/personal.html
+++ b/personal.html
@@ -898,8 +898,8 @@
    <tr>
     
          <td> - BUN</td>        
-       <td class="text-center text-danger${foundUser.bunr === 'ปกติ' ? 'text-black' : ''}">${foundUser.bunr}</td> 
-       <td class="text-center text-danger${foundUser.bunr === 'ปกติ' ? 'text-black' : ''}">${foundUser.bunv}</td>
+       <td class="text-center text-danger${foundUser.bunrl === 'ปกติ' ? 'text-black' : ''}">${foundUser.bunrl}</td> 
+       <td class="text-center text-danger${foundUser.bunrl === 'ปกติ' ? 'text-black' : ''}">${foundUser.bunv}</td>
     </tr>
   <tr>
  
