--- a/personal.html
+++ b/personal.html
@@ -860,8 +860,8 @@
     <tr>
    
         <td> - HDL</td>       
-       <td class="text-center text-danger${foundUser.helr === 'ปกติ' ? 'text-black' : ''}">${foundUser.helr}</td> 
-       <td class="text-center text-danger${foundUser.helr === 'ปกติ' ? 'text-black' : ''}">${foundUser.hdlv}</td>
+       <td class="text-center text-danger${foundUser.hdlr === 'ปกติ' ? 'text-black' : ''}">${foundUser.hdlr}</td> 
+       <td class="text-center text-danger${foundUser.hdlr === 'ปกติ' ? 'text-black' : ''}">${foundUser.hdlv}</td>
     </tr>
     <tr>
 
