--- a/personal.html
+++ b/personal.html
@@ -909,8 +909,8 @@
     </tr>
      <tr>
       <td class="fw-bold">กรดยูริค/เก๊า</td>        
-       <td class="text-center text-danger${foundUser.uricr === 'ปกติ' ? 'text-black' : ''}">${foundUser.uricr}</td> 
-       <td class="text-center text-danger${foundUser.uricr === 'ปกติ' ? 'text-black' : ''}">${foundUser.uricv}</td>
+       <td class="text-center text-danger${foundUser.uricv === 'ปกติ' ? 'text-black' : ''}">${foundUser.uricv}</td> 
+       <td class="text-center text-danger${foundUser.uricv === 'ปกติ' ? 'text-black' : ''}">${foundUser.uricr}</td>
     </tr> 
     <tr>
       <td class="fw-bold">เชื้อไวรัสตับอักเสบ บี</td>       
