--- a/personal.html
+++ b/personal.html
@@ -416,7 +416,7 @@
         </a>
       </ul>
     </header>
-    <div id="waiting" class="modal-waiting">
+    <div id="waiting" class="modal-waiting" style="display: none;">
         <div class="modal-content" style="min-width: 400px; max-width: 400px; margin-left: 20px; background-color: rgba(0, 0, 0, 0.1); box-shadow: inset 0em em rgba(0, 0, 0, 0), inset 0 .1em 0em rgba(0, 0, 0, 0); border: none;">
        <div class="row">
      <div class="col-2">
