--- a/cbc.html
+++ b/cbc.html
@@ -137,7 +137,7 @@
     </header>
    
 <div class="container-md" style="font-family: sarabun;">
-    <h class="fs-5 mt-2 mb-2">ตารางแสดงผลการทดสอบด้านชีวอนามัย</h>
+    <span id="loading" class="fs-5 mt-2 mb-2"></span>
     <table class="table table-result mt-3">
        <head>
        <thead class="table-secondary">
@@ -219,7 +219,8 @@
 
 function loadAllRecords() {
     const url = "https://script.google.com/macros/s/AKfycbza6a827EUSt4AjpTtvWJV2Rc3ERhA7HbRY0ftd10NKqKd0IKiFRHJ13qQhe56kO5G0sA/exec";
-
+    const loading = document.getElementById('loading');
+          loading.textContent = "Waiting for loading........";
     fetch(url)
         .then(response => response.json())
         .then(data => {
@@ -268,6 +269,7 @@ function loadAllRecords() {
         .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
+  loading.textContent = "";
   hideLoading();
 }
 
