--- a/cbc.html
+++ b/cbc.html
@@ -220,7 +220,7 @@
 function loadAllRecords() {
     const url = "https://script.google.com/macros/s/AKfycbza6a827EUSt4AjpTtvWJV2Rc3ERhA7HbRY0ftd10NKqKd0IKiFRHJ13qQhe56kO5G0sA/exec";
     const loading = document.getElementById('loading');
-          loading.textContent = "Waiting for loading........";
+          loading.innerText = "Waiting for loading........";
     fetch(url)
         .then(response => response.json())
         .then(data => {
@@ -265,11 +265,12 @@ function loadAllRecords() {
                     `;
                 }
             });
+          loading.innerText = "";
         })
         .catch(error => {
             console.error("❌ Error fetching data:", error);
         });
-  loading.textContent = "";
+  
   hideLoading();
 }
 
