--- a/ua.html
+++ b/ua.html
@@ -223,7 +223,7 @@
 
 
 function loadAllRecords() {
-  const loading = document.getEleMentById('loading');
+  const loading = document.getElementById('loading');
   loading.textContent = "Waiting for loading.........";
     const url = "https://script.google.com/macros/s/AKfycbza6a827EUSt4AjpTtvWJV2Rc3ERhA7HbRY0ftd10NKqKd0IKiFRHJ13qQhe56kO5G0sA/exec";
 
