--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                <a href="home.html" class="nav-item nav-link">ผลตรวจสุขภาพออนไลน์</a>
                 <a href="price.html" class="nav-item nav-link">อัตราค่าบริการ</a>
                  <a href="package.html" class="nav-item nav-link">ข้อเสนอพิเศษ</a>
-                 <a href="blog.html" class="nav-item nav-link">ประกาศ/บทความ</a>
+                 <a href="detail.html" class="nav-item nav-link">ประกาศ/บทความ</a>
                 <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
                 <a href="login.html" class="nav-item nav-link text-secndary">สำหรับเจ้าหน้าที่</a>
                 </div>
