--- a/detail.html
+++ b/detail.html
@@ -144,8 +144,12 @@
   </p>
 
   <!-- ประโยชน์ของการตรวจสุขภาพ -->
+  <div class="row">  
+<div class="col-6">
   <div class="row align-items-center my-5">
     <div class="col-md-6 thumbnail-img">Image thumbnail</div>
+  </div>
+    <div class="col-6">
     <div class="col-md-6">
       <h6 class="section-heading">ประโยชน์ของการตรวจสุขภาพประจำปี</h6>
       <ul>
@@ -156,7 +160,9 @@
       </ul>
     </div>
   </div>
-
+  </div>
+  </div>
+     <div> 
   <!-- รายการตรวจสุขภาพที่สำคัญ -->
   <div class="row align-items-center my-5">
     <div class="col-md-6">
@@ -188,6 +194,7 @@
       </ol>
     </div>
   </div>
+    
 
 
 
