--- a/detail.html
+++ b/detail.html
@@ -32,6 +32,9 @@
     <link href="style.css" rel="stylesheet">
 </head>
 <style>
+    .rowmd{
+display: flex;
+    }
      #floating-img {
     position: fixed;
     bottom: 50px;
@@ -144,7 +147,7 @@
   </p>
 
   <!-- ประโยชน์ของการตรวจสุขภาพ -->
-  <div class="row">  
+  <div class="rowmd">  
 <div class="col-6">
   <div class="row align-items-center my-5">
     <div class="col-md-6 thumbnail-img">Image thumbnail</div>
