--- a/detail.html
+++ b/detail.html
@@ -150,7 +150,7 @@ display: flex;
   <div class="rowmd">  
   <div class="col-6">
 
-    <div class="col-md-6 thumbnail-img">Image thumbnail</div>
+    <img class="thumbnail-img" src="">
 
     <div class="col-6">
 
