--- a/detail.html
+++ b/detail.html
@@ -148,7 +148,7 @@
   <div class="responsive-img mb-4">image responsive</div>
 
   <!-- บทนำ -->
-  <h5 class="text-center section-heading">บทนำ</h5>
+  <h5 class="text-center section-heading">การตรวจสุขภาพประจำปี</h5>
   <p>
     การดูแลสุขภาพของพนักงานถือเป็นสิทธิขั้นพื้นฐานที่นายจ้างควรจัดให้ ตามที่ <strong>กฎกระทรวงกำหนดมาตรฐานในการบริหารและการจัดการด้านความปลอดภัย อาชีวอนามัย และสภาพแวดล้อมในการทำงาน พ.ศ. 2549</strong> ซึ่งออกตามพระราชบัญญัติความปลอดภัยฯ ได้ระบุให้นายจ้างมีหน้าที่จัดให้มีการตรวจสุขภาพพนักงานประจำปี โดยเฉพาะผู้ที่ทำงานในสภาพแวดล้อมที่มีความเสี่ยง เช่น สารเคมี ฝุ่นละออง หรือเสียงดัง
   </p>
@@ -173,8 +173,8 @@
     </div>
 </div>
   <!-- รายการตรวจสุขภาพที่สำคัญ -->
-  <div class="row align-items-center my-5">
-    <div class="col-md-6">
+  <div class="container-group">
+ <div class="container-text">
       <h6 class="section-heading">รายการตรวจสุขภาพประจำปีที่สำคัญ</h6>
       <ul>
         <li>ตรวจร่างกายทั่วไป (ชั่งน้ำหนัก, วัดส่วนสูง, ความดันโลหิต)</li>
@@ -186,8 +186,10 @@
         <li>ตรวจคัดกรองมะเร็งที่เหมาะสมกับอายุและเพศ</li>
       </ul>
     </div>
-    <div class="col-md-6 thumbnail-img">Image thumbnail</div>
-  </div>
+   <div class="container-img">
+       <img class="thumbnail-img" src="">
+    </div>
+  </div>  
 
   <!-- ขั้นตอนการตรวจสุขภาพ -->
   <div class="row align-items-center my-5">
