--- a/main.html
+++ b/main.html
@@ -24,7 +24,8 @@
     rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
-
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1205676378615589"
+     crossorigin="anonymous"></script>
  
 </head>
 <body>
